crates/squealy/tests/compile_fail/scalar_order_by_rejected_for_aggregate_select.stderr
error[E0271]: type mismatch resolving `<Expr<'_, CountExpr<UserId>, AggregateExprAst<ColumnExprAst<UserId>>> as ProjectionClass>::Class == ScalarProjection`
  --> tests/compile_fail/scalar_order_by_rejected_for_aggregate_select.rs:16:10
   |
16 |         .select(|(user,)| user.id.count());
   |          ^^^^^^ expected `ScalarProjection`, found `AggregateProjection`
   |
   = note: required for `Ungrouped` to implement `squealy::ValidSelect<Expr<'_, CountExpr<UserId>, squealy::AggregateExprAst<squealy::ColumnExprAst<UserId>>>, OrderScalar>`
note: required by a bound in `squealy::SourceQuery::select`
  --> src/query.rs
   |
   |     fn select<P, Indices>(
   |        ------ required by a bound in this associated function
...
   |             crate::ValidSelect<P, <Self as SelectAst<'conn, 'scope, Conn>>::OrderClass>,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SourceQuery::select`
